--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-async-handler": "^1.1.4",
+    "express-jwt": "^6.0.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.15",
     "morgan": "~1.9.0",
     "socket.io": "^2.2.0",
+    "socketio-jwt": "^4.6.2",
     "vue": "^2.6.6",
     "vue-cli": "^2.9.6",
     "webpack": "^4.29.4",
